:sparkles: Finished: Diretivas do Angular

--- a/Angular/Diretivas-do-Angular/src/app/app.component.html
+++ b/Angular/Diretivas-do-Angular/src/app/app.component.html
@@ -3,6 +3,7 @@
 <app-diretivas-atributos>
   <h2>olaa</h2>
   <p>vim de fora</p>
+  <app-card></app-card>
 </app-diretivas-atributos>
 <hr />
 <router-outlet />
