:sparkles: Create Big Card News

--- a/Projetos/The-Blog/src/app/pages/home/components/big-card/big-card.component.html
+++ b/Projetos/The-Blog/src/app/pages/home/components/big-card/big-card.component.html
@@ -1,1 +1,12 @@
-<p>big-card works!</p>
+<article class="container">
+	<img
+		src="https://static1.srcdn.com/wordpress/wp-content/uploads/2025/03/spider-man-and-sadie-sink-in-stranger-things.jpg"
+		alt="foto-sadie"
+	/>
+	<h2>Sadie Sink vai parcitipar do novo Homem Aranha 4?</h2>
+	<p>
+		A renomada atriz de Stranger Things, Rua do Medo e tantos outros sucessos,
+		agora vive um novo desafio dentro do MCU! Fãs suspeitam que Sadie deve
+		interpretar a Mary Jane ou Jean Gray
+	</p>
+</article>
