--- a/Projetos/The-Blog/src/app/pages/home/home/home.component.html
+++ b/Projetos/The-Blog/src/app/pages/home/home/home.component.html
@@ -1,4 +1,12 @@
 <app-menu-bar></app-menu-bar>
 <app-menu-title></app-menu-title>
-<app-big-card></app-big-card>
-<app-small-card></app-small-card>
+<section class="news">
+	<div class="left">
+		<app-big-card></app-big-card>
+	</div>
+	<div class="right">
+		<app-small-card></app-small-card>
+		<app-small-card></app-small-card>
+		<app-small-card></app-small-card>
+	</div>
+</section>
