:sparkles: Create small Card News

--- a/Projetos/The-Blog/src/app/pages/home/components/big-card/big-card.component.html
+++ b/Projetos/The-Blog/src/app/pages/home/components/big-card/big-card.component.html
@@ -5,8 +5,13 @@
 	/>
 	<h2>Sadie Sink vai parcitipar do novo Homem Aranha 4?</h2>
 	<p>
-		A renomada atriz de Stranger Things, Rua do Medo e tantos outros sucessos,
-		agora vive um novo desafio dentro do MCU! Fãs suspeitam que Sadie deve
-		interpretar a Mary Jane ou Jean Gray
+		A atriz Sadie Sink, conhecida por seu papel como Max Mayfield na série
+		"Stranger Things" e por participações em filmes como "Rua do Medo", está
+		prestes a embarcar em um novo desafio no Universo Cinematográfico da Marvel
+		(MCU). De acordo com informações do site norte-americano Deadline, Sink foi
+		escalada para um papel significativo no aguardado "Homem-Aranha 4",
+		estrelado por Tom Holland. Embora os detalhes sobre sua personagem ainda não
+		tenham sido oficialmente confirmados, especulações apontam para duas
+		possibilidades principais: Mary Jane ou Jean Grey
 	</p>
 </article>
