--- a/Projetos/The-Blog/src/app/pages/home/components/small-card/small-card.component.html
+++ b/Projetos/The-Blog/src/app/pages/home/components/small-card/small-card.component.html
@@ -1,7 +1,7 @@
-<!-- <article class="container">
+<article class="container">
 	<img
 		src="https://people.com/thmb/UHKQNMDoAH7bthCyGJ8qUzuKIBY=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc():focal(749x0:751x2)/lilo-and-stitch-tout-031225-3b881052c4094568a501cc58b1274aa5.jpg"
 		alt="foto-Lilo-Stitch"
 	/>
 	<h2>Primeiro trailer completo do remake live-action é lançado</h2>
-</article> -->
+</article>
