--- a/Projetos/The-Blog/src/app/pages/home/components/big-card/big-card.component.css
+++ b/Projetos/The-Blog/src/app/pages/home/components/big-card/big-card.component.css
@@ -3,7 +3,8 @@
 	flex-direction: column;
 	gap: 2.4rem;
 	/* border: 2px solid beige; */
-	width: 70rem;
+	/* width: 70rem; */
+	width: 100%;
 	padding: 0 4rem;
 }
 img {
@@ -13,6 +14,7 @@ h2 {
 	font-size: 2.5rem;
 }
 p {
+	max-width: 80rem;
 	font-size: 1.5rem;
 	text-wrap: wrap;
 	opacity: 0.8;
