--- a/Projetos/The-Blog/src/app/pages/home/home/home.component.css
+++ b/Projetos/The-Blog/src/app/pages/home/home/home.component.css
@@ -1,6 +1,13 @@
 .news {
 	display: flex;
-	padding: 5.2rem 2rem;
+	padding: 4.8rem 2rem;
+	width: 100%;
 	/* background-color: brown; */
 	justify-content: center;
+}
+
+.right {
+	display: flex;
+	flex-direction: column;
+	gap: 1rem;
 }
