:sparkles: Componentes dos cards desacoplados / Links adicionados

--- a/Projetos/The-Blog/src/app/pages/home/components/big-card/big-card.component.css
+++ b/Projetos/The-Blog/src/app/pages/home/components/big-card/big-card.component.css
@@ -5,7 +5,7 @@
 	/* border: 2px solid beige; */
 	/* width: 70rem; */
 	width: 100%;
-	padding: 0 4rem;
+	padding: 0 1rem;
 }
 img {
 	width: 100%;
@@ -18,4 +18,17 @@ p {
 	font-size: 1.5rem;
 	text-wrap: wrap;
 	opacity: 0.8;
+}
+
+.container > p {
+	margin: -1rem 0 -2rem;
+}
+
+a {
+	text-decoration: none;
+}
+
+.container:hover {
+	cursor: pointer;
+	opacity: 0.9;
 }
