--- a/Projetos/The-Blog/src/app/pages/home/components/big-card/big-card.component.html
+++ b/Projetos/The-Blog/src/app/pages/home/components/big-card/big-card.component.html
@@ -1,17 +1,10 @@
-<article class="container">
-	<img
-		src="https://static1.srcdn.com/wordpress/wp-content/uploads/2025/03/spider-man-and-sadie-sink-in-stranger-things.jpg"
-		alt="foto-sadie"
-	/>
-	<h2>Sadie Sink vai parcitipar do novo Homem Aranha 4?</h2>
+<article class="container" (click)="navigateToLink()">
+	<img src="{{ cardImage }}" alt="foto-sadie" />
 	<p>
-		A atriz Sadie Sink, conhecida por seu papel como Max Mayfield na série
-		"Stranger Things" e por participações em filmes como "Rua do Medo", está
-		prestes a embarcar em um novo desafio no Universo Cinematográfico da Marvel
-		(MCU). De acordo com informações do site norte-americano Deadline, Sink foi
-		escalada para um papel significativo no aguardado "Homem-Aranha 4",
-		estrelado por Tom Holland. Embora os detalhes sobre sua personagem ainda não
-		tenham sido oficialmente confirmados, especulações apontam para duas
-		possibilidades principais: Mary Jane ou Jean Grey
+		{{ cardData }}
+	</p>
+	<h2>{{ cardTitle }}</h2>
+	<p>
+		{{ cardDescription }}
 	</p>
 </article>
