--- a/Projetos/The-Blog/src/app/pages/home/home/home.component.html
+++ b/Projetos/The-Blog/src/app/pages/home/home/home.component.html
@@ -2,11 +2,42 @@
 <app-menu-title></app-menu-title>
 <section class="news">
 	<div class="left">
-		<app-big-card></app-big-card>
+		<app-big-card
+			cardTitle="Sadie Sink vai parcitipar do novo Homem Aranha 4?"
+			cardDescription='A atriz Sadie Sink, conhecida por seu papel como Max Mayfield na série
+		"Stranger Things" e por participações em filmes como "Rua do Medo", está
+		prestes a embarcar em um novo desafio no Universo Cinematográfico da Marvel
+		(MCU). De acordo com informações do site norte-americano Deadline, Sink foi
+		escalada para um papel significativo no aguardado "Homem-Aranha 4",
+		estrelado por Tom Holland. Embora os detalhes sobre sua personagem ainda não
+		tenham sido oficialmente confirmados, especulações apontam para duas
+		possibilidades principais: Mary Jane ou Jean Grey'
+			cardImage="https://static1.srcdn.com/wordpress/wp-content/uploads/2025/03/spider-man-and-sadie-sink-in-stranger-things.jpg"
+			cardData="12/03/2024"
+			cardLink="https://google.com"
+		></app-big-card>
 	</div>
+
 	<div class="right">
-		<app-small-card></app-small-card>
-		<app-small-card></app-small-card>
-		<app-small-card></app-small-card>
+		<app-small-card
+			cardTitle="Primeiro trailer completo do remake live-action é lançado."
+			cardImage="https://people.com/thmb/UHKQNMDoAH7bthCyGJ8qUzuKIBY=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc():focal(749x0:751x2)/lilo-and-stitch-tout-031225-3b881052c4094568a501cc58b1274aa5.jpg"
+			cardData="10/03/2024"
+			cardLink="https://google.com"
+		></app-small-card>
+
+		<app-small-card
+			cardTitle="Série de Star Wars Cancelada!"
+			cardImage="https://br.web.img3.acsta.net/c_400_225/img/fb/3f/fb3f42bfab4f1f569dc64acb69f7dfba.jpg"
+			cardData="14/03/2024"
+			cardLink="https://google.com"
+		></app-small-card>
+
+		<app-small-card
+			cardTitle="‘Avatar: Fogo e Cinzas’ será o filme mais LONGO da franquia, afirma James Cameron."
+			cardImage="https://cinepop.com.br/wp-content/uploads/2023/05/avatar2-696x395.jpg"
+			cardData="11/03/2024"
+			cardLink="https://google.com"
+		></app-small-card>
 	</div>
 </section>
