--- a/Projetos/The-Blog/src/app/pages/home/components/menu-bar/menu-bar.component.html
+++ b/Projetos/The-Blog/src/app/pages/home/components/menu-bar/menu-bar.component.html
@@ -1,9 +1,10 @@
 <div class="container">
 	<ul>
-		<li><a href="">Github</a></li>
-		<li><a href="">LinkedIn</a></li>
-		<li><a href="">Portfólio</a></li>
-		<li><a href="">Redes Sociais</a></li>
+		<li><a href="https://github.com/lipe-s-m">Github</a></li>
+		<li>
+			<a href="https://www.linkedin.com/in/felipe-serejo-monteiro/">LinkedIn</a>
+		</li>
+		<li><a href="https://links-social-media.vercel.app/">Redes Sociais</a></li>
 	</ul>
 	<img src="https://img.icons8.com/badges/512/blogger.png" alt="" />
 </div>
