:sparkles: Mock de dados criados / Interface consumindo mock de dados dinamicamente

--- a/Projetos/The-Blog/src/app/pages/home/components/big-card/big-card.component.html
+++ b/Projetos/The-Blog/src/app/pages/home/components/big-card/big-card.component.html
@@ -1,4 +1,5 @@
-<article class="container" (click)="navigateToLink()">
+<!-- <article class="container" (click)="navigateToLink()"> -->
+<article class="container" [routerLink]="['/content', id]">
 	<img src="{{ cardImage }}" alt="foto-sadie" />
 	<p>
 		{{ cardData }}
