--- a/Projetos/The-Blog/src/app/pages/home/components/small-card/small-card.component.html
+++ b/Projetos/The-Blog/src/app/pages/home/components/small-card/small-card.component.html
@@ -1,4 +1,4 @@
-<article class="container" (click)="navigateToLink()">
+<article class="container" [routerLink]="['/content', id]">
 	<img src="{{ cardImage }}" alt="Photo-Lilo-Stitch" />
 	<div class="content">
 		<p>{{ cardData }}</p>
