:sparkles: Adjust responsive layout from home

--- a/Projetos/The-Blog/src/app/pages/home/components/menu-bar/menu-bar.component.css
+++ b/Projetos/The-Blog/src/app/pages/home/components/menu-bar/menu-bar.component.css
@@ -1,14 +1,24 @@
 .container {
+	display: flex;
+	align-items: center;
+}
+.hamburger,
+hr,
+.close-side-menu {
+	display: none;
+}
+.content {
+	width: 100%;
 	padding: 0.2rem 8rem;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
 }
-.container > ul {
+.content > ul {
 	display: flex;
 	gap: 3.2rem;
 }
-.container > ul > li {
+.content > ul > li {
 	list-style: none;
 }
 
@@ -16,13 +26,14 @@ a {
 	text-decoration: none;
 	font-size: 2rem;
 	padding: 1.2rem;
+	background-color: transparent;
 }
 a:hover {
 	transition: 200ms;
 	opacity: 0.8;
 }
 
-.container > img {
+.content > img {
 	width: 8rem;
 	border-radius: 100%;
 }
