--- a/Projetos/The-Blog/src/app/pages/home/components/menu-title/menu-title.responsive.component.css
+++ b/Projetos/The-Blog/src/app/pages/home/components/menu-title/menu-title.responsive.component.css
@@ -1,5 +1,16 @@
-@media (max-width: 1024px) {
+@media (max-width: 565px) {
 	h1 {
-		color: aqua;
+		font-size: 7.2rem;
+	}
+}
+@media (max-width: 425px) {
+	h1 {
+		font-size: 6.4rem;
+	}
+}
+
+@media (max-width: 375px) {
+	h1 {
+		font-size: 5.6rem;
 	}
 }
