--- a/Projetos/The-Blog/src/app/pages/home/components/small-card/small-card.component.css
+++ b/Projetos/The-Blog/src/app/pages/home/components/small-card/small-card.component.css
@@ -6,19 +6,21 @@
 	/* border: 2px solid beige; */
 	/* width: 60rem; */
 	width: 100%;
-	padding: 0 1rem;
+	padding: 0 1rem 0 0;
 }
 img {
 	width: 40%;
 }
 h2 {
 	font-size: 2rem;
+	background-color: inherit;
 }
 p {
 	max-width: 80rem;
 	font-size: 1.5rem;
 	text-wrap: wrap;
 	opacity: 0.8;
+	background-color: inherit;
 }
 .container > p {
 	margin: -1rem 0 -2rem;
@@ -29,10 +31,12 @@ p {
 	flex-direction: column;
 	gap: 1.6rem;
 	padding: 0.8rem 0;
+	background-color: transparent;
 }
 
 .container:hover {
 	transition: 200ms;
 	cursor: pointer;
 	opacity: 0.9;
+	background-color: rgb(25, 25, 25);
 }
