--- a/Projetos/The-Blog/src/app/pages/content/content.component.css
+++ b/Projetos/The-Blog/src/app/pages/content/content.component.css
@@ -3,12 +3,14 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	gap: 2.4rem;
+	padding-bottom: 6.4rem;
 }
 .top-content {
 	display: flex;
 	flex-direction: row;
-	width: 100%;
 	justify-content: center;
+	width: 100%;
 }
 .top-content > button {
 	background-color: none;
@@ -27,18 +29,21 @@
 .top-content > img {
 	margin: 0 auto;
 	max-width: 100rem;
+	min-width: 80rem;
 }
 .content {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	text-align: center;
+	gap: 1rem;
 	width: 70%;
 }
 .content > h1 {
-	font-size: 3.8rem;
+	font-size: 4rem;
 }
 .content > p {
-	font-size: 1.6rem;
+	font-size: 2rem;
 	opacity: 0.8;
+	white-space: pre-line;
 }
