--- a/Projetos/The-Blog/src/app/pages/home/components/big-card/big-card.component.css
+++ b/Projetos/The-Blog/src/app/pages/home/components/big-card/big-card.component.css
@@ -1,27 +1,29 @@
 .container {
 	display: flex;
 	flex-direction: column;
-	gap: 2.4rem;
+	gap: 1.2rem;
 	/* border: 2px solid beige; */
 	/* width: 70rem; */
 	width: 100%;
-	padding: 0 1rem;
+	padding: 0 1rem 1rem;
+	background-color: transparent;
 }
 img {
 	width: 100%;
 }
 h2 {
 	font-size: 2.5rem;
+	background-color: transparent;
 }
 p {
 	max-width: 80rem;
 	font-size: 1.5rem;
-	text-wrap: wrap;
 	opacity: 0.8;
+	background-color: transparent;
 }
 
 .container > p {
-	margin: -1rem 0 -2rem;
+	/* margin: -1rem 0 -2rem; */
 }
 
 a {
@@ -32,4 +34,5 @@ a {
 	transition: 200ms;
 	cursor: pointer;
 	opacity: 0.9;
+	background-color: rgb(25, 25, 25);
 }
