--- a/Projetos/The-Blog/src/app/pages/home/components/menu-bar/menu-bar.component.html
+++ b/Projetos/The-Blog/src/app/pages/home/components/menu-bar/menu-bar.component.html
@@ -1,26 +1,34 @@
-<div class="container">
-	<ul>
-		<li>
-			<a href="https://github.com/lipe-s-m" target="_blank" tabindex="1"
-				>Github</a
-			>
-		</li>
-		<li>
-			<a
-				href="https://www.linkedin.com/in/felipe-serejo-monteiro/"
-				target="_blank"
-				tabindex="2"
-				>LinkedIn</a
-			>
-		</li>
-		<li>
-			<a
-				href="https://links-social-media.vercel.app/"
-				target="_blank"
-				tabindex="3"
-				>Redes Sociais</a
-			>
-		</li>
-	</ul>
-	<img src="https://img.icons8.com/badges/512/blogger.png" alt="" />
-</div>
+<header class="container">
+	<span class="hamburger" (click)="setIsEnableHamburger()">☰</span>
+
+	<nav class="content" [class.active]="isEnableHamburger">
+		<span class="close-side-menu" (click)="setIsEnableHamburger()">X</span>
+		<ul>
+			<li>
+				<a href="https://github.com/lipe-s-m" target="_blank" tabindex="1"
+					>Github</a
+				>
+			</li>
+			<hr />
+			<li>
+				<a
+					href="https://www.linkedin.com/in/felipe-serejo-monteiro/"
+					target="_blank"
+					tabindex="2"
+					>LinkedIn</a
+				>
+			</li>
+			<hr />
+
+			<li>
+				<a
+					href="https://links-social-media.vercel.app/"
+					target="_blank"
+					tabindex="3"
+					>Redes Sociais</a
+				>
+			</li>
+		</ul>
+		<img src="https://img.icons8.com/badges/512/blogger.png" alt="" />
+	</nav>
+</header>
