--- a/Angular/Services-No-Angular/src/app/pages/home/components/cards/cards.component.html
+++ b/Angular/Services-No-Angular/src/app/pages/home/components/cards/cards.component.html
@@ -1,44 +1,16 @@
 <section class="cards">
   <div class="background"></div>
   <ul>
-    <li>
+    <li *ngFor="let pokemon of listPokemons">
       <article>
-        <img
-          src="https://www.pokemon.com/static-assets/content-assets/cms2/img/pokedex/full/004.png"
-          alt=""
-        />
-        <p>Nº0001</p>
-        <h3>sou um pikomon</h3>
-        <div class="atributos">
-          <span>Planta</span>
-        </div>
-      </article>
-    </li>
-    <li>
-      <article>
-        <img
-          src="https://www.pokemon.com/static-assets/content-assets/cms2/img/pokedex/full/004.png"
-          alt=""
-        />
-        <p>Nº0002</p>
-        <h3>sou um pikomon</h3>
-        <div class="atributos">
-          <span>Fogo</span>
-        </div>
-      </article>
-    </li>
-    <li>
-      <article>
-        <img
-          src="https://www.pokemon.com/static-assets/content-assets/cms2/img/pokedex/full/004.png"
-          alt=""
-        />
-        <p>Nº0003</p>
-        <h3>sou um pikomon</h3>
-        <div class="atributos">
-          <span>Pedra</span>
-          <span>Planta</span>
-        </div>
+        <img src="{{ pokemon.imagePokemon }}" alt="" />
+        <p>{{ pokemon.idPokemon }}</p>
+        <h3>{{ pokemon.namePokemon }}</h3>
+        <ul class="atributos">
+          <li *ngFor="let atributo of pokemon.atributosPokemon">
+            <span> {{ atributo }}</span>
+          </li>
+        </ul>
       </article>
     </li>
   </ul>
