--- a/Angular/Services-No-Angular/src/app/pages/home/components/search/search.component.css
+++ b/Angular/Services-No-Angular/src/app/pages/home/components/search/search.component.css
@@ -13,6 +13,20 @@
   width: 100%;
   padding: 1.2rem;
 }
+.content > .right {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  margin: auto 0;
+}
+.content > .right > p {
+  width: 75%;
+  padding: 1rem 1.4rem;
+  border-radius: 1rem;
+  background-color: rgb(77, 173, 91);
+  color: white;
+}
 .bottom-content {
   display: flex;
   width: 100%;
