--- a/Angular/Services-No-Angular/src/app/pages/home/components/cards/cards.component.css
+++ b/Angular/Services-No-Angular/src/app/pages/home/components/cards/cards.component.css
@@ -3,14 +3,17 @@
   justify-content: space-around;
   /* background-color: bisque; */
   background-color: white;
+  width: 100%;
 }
 
 .cards > ul {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-auto-rows: 23rem;
-  gap: 3rem;
-  padding: 2rem;
+  grid-auto-rows: auto;
+  width: 100%;
+
+  gap: 2.4rem 4.8rem;
+  padding: 3.2rem;
   /* background-color: blueviolet; */
 }
 
@@ -21,7 +24,7 @@
 }
 
 article {
-  width: 16rem;
+  min-width: 16rem;
   padding: 1rem;
 
   border: 3px solid gray;
@@ -29,12 +32,12 @@ article {
 }
 
 article > img {
-  width: 90%;
+  width: 100%;
 }
 
 article > img + p {
   opacity: 0.6;
-  font-size: 1.2rem;
+  font-size: 2.4rem;
 }
 article > h3 {
   font-size: 1.6rem;
@@ -57,7 +60,7 @@ span {
 
 .background {
   min-height: 100dvh;
-  width: 100%;
+  width: 25%;
   background: rgb(164, 159, 130);
   background: linear-gradient(
     153deg,
