--- a/Angular/Services-No-Angular/src/app/pages/home/components/cards/cards.component.css
+++ b/Angular/Services-No-Angular/src/app/pages/home/components/cards/cards.component.css
@@ -1,71 +1,73 @@
 .cards {
-  display: flex;
-  justify-content: space-around;
-  /* background-color: bisque; */
-  background-color: white;
-  width: 100%;
+    display: flex;
+    justify-content: space-around;
+    background-color: white;
+    width: 100%;
 }
 
 .cards > ul {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-auto-rows: auto;
-  width: 100%;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: auto;
+    width: 100%;
 
-  gap: 2.4rem 4.8rem;
-  padding: 3.2rem;
-  /* background-color: blueviolet; */
+    gap: 2.4rem 4.8rem;
+    padding: 3.2rem 4rem;
 }
 
 .cards > ul > li {
-  padding: 1rem;
-  list-style: none;
-  /* background-color: aqua; */
+    padding: 1rem;
+    list-style: none;
 }
 
 article {
-  min-width: 16rem;
-  padding: 1rem;
+    min-width: 16rem;
+    max-width: 25rem;
+    padding: 1.6rem;
 
-  border: 3px solid gray;
-  background-color: rgb(248, 252, 252);
+    border: 0.4rem solid gray;
+    border-radius: 0.8rem;
+    background-color: rgb(234, 236, 236);
 }
 
 article > img {
-  width: 100%;
+    width: 100%;
+    background-color: white;
 }
 
 article > img + p {
-  opacity: 0.6;
-  font-size: 2.4rem;
+    opacity: 0.6;
+    font-size: 2.4rem;
 }
 article > h3 {
-  font-size: 1.6rem;
-  margin-bottom: 0.4rem;
+    font-size: 4rem;
+    margin-bottom: 0.4rem;
 }
 
 article > .atributos {
-  display: flex;
-  gap: 0 0.4rem;
+    display: flex;
+    gap: 0 1.2rem;
+    font-size: 3rem;
 }
 
 .atributos > li {
-  list-style: none;
+    list-style: none;
 }
 span {
-  display: inline-block;
-  padding: 0.2rem 0.6rem;
-  background-color: rgb(110, 238, 121);
+    display: inline-block;
+    padding: 0.2rem 0.8rem 0.8rem;
+    border-radius: 0.6rem;
+    background-color: rgba(224, 224, 224, 0.904);
 }
 
 .background {
-  min-height: 100dvh;
-  width: 25%;
-  background: rgb(164, 159, 130);
-  background: linear-gradient(
-    153deg,
-    rgba(164, 159, 130, 1) 0%,
-    rgba(195, 192, 180, 1) 35%,
-    rgba(255, 251, 241, 1) 100%
-  );
+    min-height: 100dvh;
+    width: 25%;
+    background: rgb(164, 159, 130);
+    background: linear-gradient(
+        153deg,
+        rgba(164, 159, 130, 1) 0%,
+        rgba(195, 192, 180, 1) 35%,
+        rgba(255, 251, 241, 1) 100%
+    );
 }
