--- a/Angular/Services-No-Angular/src/app/pages/home/components/cards/cards.component.html
+++ b/Angular/Services-No-Angular/src/app/pages/home/components/cards/cards.component.html
@@ -1,7 +1,7 @@
 <section class="cards">
-  <div class="background"></div>
-  <ul>
-    <!-- <li>
+    <div class="background"></div>
+    <ul>
+        <!-- <li>
       <article>
         <img src="{{ pokemon.sprites.front_default }}" alt="" />
         <p>{{ pokemon.id }}</p>
@@ -13,18 +13,18 @@
         </ul>
       </article>
     </li> -->
-    <li *ngFor="let pokemon of listaPokemons">
-      <article>
-        <img src="{{ pokemon.sprites.front_default }}" alt="" />
-        <p>{{ pokemon.id }}</p>
-        <h3>{{ pokemon.name }}</h3>
-        <ul class="atributos">
-          <li *ngFor="let atributo of pokemon.types">
-            <span> {{ atributo.type.name }}</span>
-          </li>
-        </ul>
-      </article>
-    </li>
-  </ul>
-  <div class="background"></div>
+        <li *ngFor="let pokemon of listaPokemons">
+            <article>
+                <img src="{{ pokemon.sprites.front_default }}" alt="" />
+                <p>Nº 00{{ pokemon.id }}</p>
+                <h3>{{ pokemon.name }}</h3>
+                <ul class="atributos">
+                    <li *ngFor="let atributo of pokemon.types">
+                        <span> {{ atributo.type.name }}</span>
+                    </li>
+                </ul>
+            </article>
+        </li>
+    </ul>
+    <div class="background"></div>
 </section>
