--- a/Angular/Services-No-Angular/src/app/shared/header/header.component.css
+++ b/Angular/Services-No-Angular/src/app/shared/header/header.component.css
@@ -1,10 +1,15 @@
 header {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(41, 43, 54);
+}
+header > img {
+    width: 26rem;
 }
 hr {
-  width: 100%;
-  margin: 0.4rem 0;
+    margin: 1rem 0;
+    width: 100%;
+    border: 0.2rem solid rgba(255, 235, 205, 0.2);
 }
