:sparkles: Finished Responsive layout from all devices

--- a/Angular/Services-No-Angular/src/app/pages/home/components/cards/cards.component.css
+++ b/Angular/Services-No-Angular/src/app/pages/home/components/cards/cards.component.css
@@ -21,15 +21,19 @@
 }
 
 article {
-    min-width: 16rem;
-    max-width: 25rem;
     padding: 1.6rem;
 
     border: 0.4rem solid gray;
     border-radius: 0.8rem;
     background-color: rgb(234, 236, 236);
+    color: rgb(54, 31, 12);
 }
-
+article:hover {
+    transition: 200ms;
+    cursor: pointer;
+    opacity: 0.9;
+    background-color: rgb(218, 219, 219);
+}
 article > img {
     width: 100%;
     background-color: white;
@@ -57,7 +61,8 @@ span {
     display: inline-block;
     padding: 0.2rem 0.8rem 0.8rem;
     border-radius: 0.6rem;
-    background-color: rgba(224, 224, 224, 0.904);
+    background-color: rgb(105, 105, 105);
+    color: aliceblue;
 }
 
 .background {
